Removed the status select for apps on the admin dash. Made the Load More button blue so its different from the New Application button. Added some autocomplete tags for some username and password fields. Fixed some forms on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,6 +279,9 @@ nav .nav-link:hover {
     padding: 4px 8px;
     width: 80px;
 }
+.btn-log-in-out i{
+    color: var(--submit-text-color) !important;
+}
 
 .btn-log-in-out:disabled{
     background-color: var(--disabled-btn-bg-color) !important;
@@ -646,6 +649,23 @@ table td {
     background-color: #8a6d33;
 }
 
+.more-apps-btn {
+    background-color: #0b65c4;
+    border: 1px solid #0b65c4;
+    border-radius: 2px;
+    color: white;
+    font-weight: 600;
+    padding: 7px 10px 7px 10px;
+}
+
+.more-apps-btn:hover {
+    background-color: #033a94;
+    border: 1px solid  #033a94;
+    border-radius: 2px;
+    padding: 7px 10px 7px 10px;
+    transition: .75s;
+}
+
 /*********************** delete modal **************************/ /*********************** delete modal **************************/
 /*********************** delete modal **************************/ /*********************** delete modal **************************/
 /* User List */
@@ -963,6 +983,10 @@ a {
     width: 200px;
 }
 
+#user-edit-modal-roles{
+    word-break: break-all;
+}
+
 
 /* announcements table*/
 .job-url {
@@ -1160,10 +1184,6 @@ a {
     cursor: pointer;
 }
 
-#more-apps-btn{
-    width: 100%;
-    height: 50px;
-}
 
 .hidden{
     display: none;
@@ -1228,21 +1248,6 @@ a {
         width: 80%;
         margin: auto auto 25px;
     }
-    #new-app-container, #update-account-container {
-        width: 50%;
-    }
-    /*.app-button-inner {*/
-    /*    padding-left: 2px;*/
-    /*    padding-right: 2px;*/
-    /*}*/
-
-    /* nav mobile 993px */
-
-    /*nav {*/
-    /*    a, .dropdown-item {*/
-    /*        font-size: 1.7rem !important;*/
-    /*    }*/
-    /*}*/
 
     #dark-mode-list-item > div {
         padding-top: 0;
@@ -1344,7 +1349,6 @@ a {
     .app-job-col, .app-user-col, .app-email-col{
         width: 15%;
     }
-
 
     .user-name-col, .user-email-col, .user-status-col, .announce-url-col{
         width: 33%;
